@@ -65,12 +65,13 @@
         <maven.compiler.release>21</maven.compiler.release>
 
         <junit.version>5.11.4</junit.version>
-        <mockito.version>5.15.2</mockito.version>
+        <mockito.version>5.20.0</mockito.version>
         <jackson.version>2.17.2</jackson.version>
-        <burningwave.version>12.65.2</burningwave.version>
+        <burningwave.version>12.66.2</burningwave.version>
         <junit-platform-launcher.version>1.11.3</junit-platform-launcher.version>
         <instancio.version>5.3.0</instancio.version>
         <commons-lang3.version>3.17.0</commons-lang3.version>
+        <byte-buddy.version>1.18.0</byte-buddy.version>
     </properties>
 
     <dependencyManagement>
@@ -109,6 +110,17 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-junit-jupiter</artifactId>
                 <version>${mockito.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>${byte-buddy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy-agent</artifactId>
+                <version>${byte-buddy.version}</version>
             </dependency>
 
             <dependency>
@@ -181,6 +193,12 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.3.0</version>
                     <configuration>
+                        <argLine>
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                            -XX:+EnableDynamicAgentLoading
+                        </argLine>
                         <excludedGroups>
                             dummyTest
                         </excludedGroups>
